// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SButton.vue can be size large 1`] = `
<button class="button button--size-large">
  <!---->
  <!----> Button Text
  <!----></button>
`;

exports[`SButton.vue can be size regular 1`] = `
<button class="button button--size-regular">
  <!---->
  <!----> Button Text
  <!----></button>
`;

exports[`SButton.vue can be size small 1`] = `
<button class="button button--size-small">
  <!---->
  <!----> Button Text
  <!----></button>
`;

exports[`SButton.vue can have a loading spinner 1`] = `
<button class="button button--loading"><span class="button__spinner"><sspinner></sspinner></span>
  <!----> Button Text
  <!----></button>
`;

exports[`SButton.vue can have an icon and no text 1`] = `
<button aria-label="Button" class="button button--icon-only">
  <!---->
  <sicon icon="activity" aria-hidden="true" class="button__icon button__icon--left"></sicon>
  <!---->
  <!---->
</button>
`;

exports[`SButton.vue can have an icon on the left 1`] = `
<button class="button">
  <!---->
  <sicon icon="activity" aria-hidden="true" class="button__icon button__icon--left"></sicon> Button Text
  <!---->
</button>
`;

exports[`SButton.vue can have an icon on the right 1`] = `
<button class="button">
  <!---->
  <!----> Button Text <sicon icon="activity" aria-hidden="true" class="button__icon button__icon--right"></sicon></button>
`;

exports[`SButton.vue can use slot text for \`aria-label\` 1`] = `
<button aria-label="Button Text" class="button button--icon-only">
  <!---->
  <sicon icon="activity" aria-hidden="true" class="button__icon button__icon--left"></sicon>
  <!---->
  <!---->
</button>
`;

exports[`SButton.vue renders correctly 1`] = `
<button class="button">
  <!---->
  <!----> Button Text
  <!----></button>
`;

exports[`SButton.vue with color blue and "outlined" style can be the base shade 1`] = `
<button class="button button--color-blue-outlined">
  <!---->
  <!----> Button Text
  <!----></button>
`;

exports[`SButton.vue with color blue and "text" style can be the base shade 1`] = `
<button class="button button--color-blue-text">
  <!---->
  <!----> Button Text
  <!----></button>
`;

exports[`SButton.vue with color blue and base style can be the base shade 1`] = `
<button class="button button--color-blue">
  <!---->
  <!----> Button Text
  <!----></button>
`;

exports[`SButton.vue with color gold and "outlined" style can be the base shade 1`] = `
<button class="button button--color-gold-outlined">
  <!---->
  <!----> Button Text
  <!----></button>
`;

exports[`SButton.vue with color gold and "text" style can be the base shade 1`] = `
<button class="button button--color-gold-text">
  <!---->
  <!----> Button Text
  <!----></button>
`;

exports[`SButton.vue with color gold and base style can be the base shade 1`] = `
<button class="button button--color-gold">
  <!---->
  <!----> Button Text
  <!----></button>
`;

exports[`SButton.vue with color green and "outlined" style can be the base shade 1`] = `
<button class="button button--color-green-outlined">
  <!---->
  <!----> Button Text
  <!----></button>
`;

exports[`SButton.vue with color green and "text" style can be the base shade 1`] = `
<button class="button button--color-green-text">
  <!---->
  <!----> Button Text
  <!----></button>
`;

exports[`SButton.vue with color green and base style can be the base shade 1`] = `
<button class="button button--color-green">
  <!---->
  <!----> Button Text
  <!----></button>
`;

exports[`SButton.vue with color grey and "outlined" style can be the base shade 1`] = `
<button class="button button--color-grey-outlined">
  <!---->
  <!----> Button Text
  <!----></button>
`;

exports[`SButton.vue with color grey and "text" style can be the base shade 1`] = `
<button class="button button--color-grey-text">
  <!---->
  <!----> Button Text
  <!----></button>
`;

exports[`SButton.vue with color grey and base style can be the base shade 1`] = `
<button class="button button--color-grey">
  <!---->
  <!----> Button Text
  <!----></button>
`;

exports[`SButton.vue with color ice and "outlined" style can be the base shade 1`] = `
<button class="button button--color-ice-outlined">
  <!---->
  <!----> Button Text
  <!----></button>
`;

exports[`SButton.vue with color ice and "text" style can be the base shade 1`] = `
<button class="button button--color-ice-text">
  <!---->
  <!----> Button Text
  <!----></button>
`;

exports[`SButton.vue with color ice and base style can be the base shade 1`] = `
<button class="button button--color-ice">
  <!---->
  <!----> Button Text
  <!----></button>
`;

exports[`SButton.vue with color magenta and "outlined" style can be the base shade 1`] = `
<button class="button button--color-magenta-outlined">
  <!---->
  <!----> Button Text
  <!----></button>
`;

exports[`SButton.vue with color magenta and "text" style can be the base shade 1`] = `
<button class="button button--color-magenta-text">
  <!---->
  <!----> Button Text
  <!----></button>
`;

exports[`SButton.vue with color magenta and base style can be the base shade 1`] = `
<button class="button button--color-magenta">
  <!---->
  <!----> Button Text
  <!----></button>
`;

exports[`SButton.vue with color night and "outlined" style can be the base shade 1`] = `
<button class="button button--color-night-outlined">
  <!---->
  <!----> Button Text
  <!----></button>
`;

exports[`SButton.vue with color night and "text" style can be the base shade 1`] = `
<button class="button button--color-night-text">
  <!---->
  <!----> Button Text
  <!----></button>
`;

exports[`SButton.vue with color night and base style can be the base shade 1`] = `
<button class="button button--color-night">
  <!---->
  <!----> Button Text
  <!----></button>
`;

exports[`SButton.vue with color red and "outlined" style can be the base shade 1`] = `
<button class="button button--color-red-outlined">
  <!---->
  <!----> Button Text
  <!----></button>
`;

exports[`SButton.vue with color red and "text" style can be the base shade 1`] = `
<button class="button button--color-red-text">
  <!---->
  <!----> Button Text
  <!----></button>
`;

exports[`SButton.vue with color red and base style can be the base shade 1`] = `
<button class="button button--color-red">
  <!---->
  <!----> Button Text
  <!----></button>
`;

exports[`SButton.vue with color turquoise and "outlined" style can be the base shade 1`] = `
<button class="button button--color-turquoise-outlined">
  <!---->
  <!----> Button Text
  <!----></button>
`;

exports[`SButton.vue with color turquoise and "text" style can be the base shade 1`] = `
<button class="button button--color-turquoise-text">
  <!---->
  <!----> Button Text
  <!----></button>
`;

exports[`SButton.vue with color turquoise and base style can be the base shade 1`] = `
<button class="button button--color-turquoise">
  <!---->
  <!----> Button Text
  <!----></button>
`;

exports[`SButton.vue with color white and "outlined" style can be the base shade 1`] = `
<button class="button button--color-white-outlined">
  <!---->
  <!----> Button Text
  <!----></button>
`;

exports[`SButton.vue with color white and "text" style can be the base shade 1`] = `
<button class="button button--color-white-text">
  <!---->
  <!----> Button Text
  <!----></button>
`;

exports[`SButton.vue with color white and base style can be the base shade 1`] = `
<button class="button button--color-white">
  <!---->
  <!----> Button Text
  <!----></button>
`;
